# lora_gps_tracking

./: .gitignore  .gitmodules  README.md  client_proto.py
arduino/src/: lora_gps_recv.ino  lora_gps_send.ino
client/: .gitignore  .gitmodules  .project.toml  CMakeLists.txt  main.py
client/py_proto/: main.py
client/res/shader/: font.fs.glsl  font.vs.glsl  framebuffer.fs.glsl  framebuffer.vs.glsl  marker.fs.glsl  marker.vs.glsl  tile.fs.glsl  tile.vs.glsl
client/src/: main.cpp  marker.cpp  marker.hpp  osm.cpp  osm.hpp  renderer.cpp  renderer.hpp
src/lora_gps_recv/: lora_gps_recv.ino
src/lora_gps_send/: lora_gps_send.ino
